z-index fix

--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -260,5 +260,5 @@
     }
 
     .trackActionDropdown {
-      z-index: 9999;
+      z-index: 102 !important;
     }
